# Discovery-Collision-Theory-DCT-Local-Lab

./: .env  .env.example  .gitignore  LICENSE  README.md  prompt.txt  pyproject.toml
config/: full_experiment.yaml  openworld_pathfinder.yaml  quickstart.yaml
dct/: __main__.py  cli.py  config.py  schemas.py  utils.py
dct/agents/: __init__.py  collision_engine.py  common.py  trajectory_a.py  trajectory_b.py  verifier.py
dct/api/: __init__.py  app.py
dct/benchmarks/: __init__.py  autonomy_generalization.py  base.py  compression.py  dynamical.py  open_world_noise.py  real_world_laws.py  registry.py  symbolic.py
dct/llm/: __init__.py  prompts.py  provider.py
dct/memory/: __init__.py  sqlite_store.py
dct/orchestration/: __init__.py  baselines.py  orchestrator.py
dct/prompts/: collision.txt  trajectory_a.txt  trajectory_b.txt  verifier.txt
dct/reporting/: __init__.py  metrics.py  plots.py  writer.py
dct/ui/: app.js  index.html  styles.css
dct_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reports/: example_report.md
scripts/: local_experiment.py  run_full.sh  run_quick.sh
tests/: fake_provider.py  test_access_policy.py  test_agent_output_shape_resilience.py  test_api_enhancements.py  test_api_ui.py  test_benchmarks.py  test_collision.py  test_json_parse_resilience.py  test_openworld_metrics.py  test_orchestrator.py  test_provider_factory.py  test_provider_openai_json_mode.py  test_sqlite_store.py  test_verifier.py
